# restos-v3

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
apps/backend/: .env.example  Dockerfile  README.md  conftest.py  docker-entrypoint.sh  manage.py  pyproject.toml
apps/backend/apps/analytics/: models.py  services.py  urls.py  views.py
apps/backend/apps/audit/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/backend/apps/events/: apps.py  dispatch.py  signals.py  urls.py  views.py
apps/backend/apps/inventory/: admin.py  apps.py  models.py  serializers.py  services.py  services_8a.py  urls.py  views.py  views_8a.py
apps/backend/apps/kitchen/: apps.py  serializers.py  services.py  urls.py  views.py
apps/backend/apps/licensing/: admin.py  apps.py  middleware.py  models.py  permissions.py  signals.py  sync.py  token_service.py  urls.py  views.py
apps/backend/apps/menu/: admin.py  apps.py  defaults.py  import_excel.py  models.py  serializers.py  services.py  services_autostop.py  signals.py  signals_techcard.py  urls.py  views.py
apps/backend/apps/orders/: admin.py  apps.py  defaults.py  models.py  serializers.py  services.py  signals.py  urls_cancel_reasons.py  urls_discounts.py  urls_payments.py  views.py
apps/backend/apps/payroll/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/backend/apps/printing/: admin.py  apps.py  escpos_sender.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/backend/apps/reservations/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/backend/apps/shifts/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/backend/apps/superadmin/: apps.py  auth.py  dashboard.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/backend/apps/tables/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/backend/apps/telemetry/: admin.py  apps.py  collector.py  models.py  sender.py  urls.py  views.py
apps/backend/apps/users/: admin.py  apps.py  auth.py  managers.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/backend/common/: exceptions.py  idempotency.py  models.py  pagination.py  permissions.py
apps/backend/common/migrations/: 0001_initial.py
apps/backend/config/: urls.py
apps/backend/config/settings/: base.py  cloud.py  dev.py  embedded.py  prod.py  restaurant.py
apps/backend/printouts/: 1016.txt  1017.txt  1058.txt  1059.txt  1137.txt  1138.txt  116.txt  117.txt  1234.txt  1235.txt  1280.txt  1281.txt  129.txt  130.txt  1322.txt  1323.txt  136.txt  137.txt  1410.txt  1411.txt  1506.txt  1507.txt  1562.txt  1563.txt  1606.txt  1607.txt  1623.txt  1624.txt  1654.txt  1655.txt  1694.txt  1695.txt  1698.txt  1699.txt  1742.txt  1743.txt  1777.txt  1778.txt  178.txt  179.txt  (+147 more)
apps/pos/: README.md  installer.iss  pos.spec  pyproject.toml
apps/pos/pos/: __main__.py  config.py  http_client.py  main.py  sse_client.py  state.py
apps/pos/pos/auth/: pin_login_screen.py  session.py
apps/pos/pos/lib/: net.py  qr.py
apps/pos/pos/resources/: format.py  hwid.py  icons.py  license_store.py  (+1 more)
apps/pos/tests/: conftest.py  test_abc_menu_screen.py  test_active_orders_screen.py  test_active_orders_tabs.py  test_audit_section.py  test_batch_cook_dialog.py  test_cancel_item_dialog.py  test_cash_op_dialog.py  test_category_station.py  test_close_shift_screen.py  test_discount_picker.py  test_dish_card_badges.py  test_general_section_print.py  test_http_client.py  test_inventory_section.py  test_item_notes.py  test_kitchen_screen.py  test_license_banner.py  test_manager_pin_dialog.py  test_menu_search.py  test_menu_section.py  test_menu_submit.py  test_modifier_picker.py  test_numpad.py  test_open_shift_screen.py  test_order_card.py  test_order_history.py  test_order_payment_panel.py  test_payment_compact.py  test_payment_dialog.py  test_payment_mixed.py  test_payment_service_charge.py  test_payment_tip.py  test_payments_discounts_sections.py  test_pin_login_screen.py  test_print_stations.py  test_receipt_status_dialog.py  test_refund_dialog.py  test_reservations_screen.py  test_screens_styled_background.py  (+16 more)
(+352 files in other folders)
