[project]
name = "restos-backend"
version = "0.1.0"
description = "RestOS v3 — Django REST API + admin"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-filter>=24.0",
    "django-cors-headers>=4.4",
    "django-unfold>=0.91",
    "django-environ>=0.11",
    "psycopg[binary]>=3.2",
    "python-escpos>=3.1",
    "openpyxl>=3.1",
    "bcrypt>=4.2",
    "pillow>=10.4",
    "gunicorn>=23.0; sys_platform != 'win32'",
    "waitress>=3.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "django-stubs[compatible-mypy]>=5.0",
    "factory-boy>=3.3",
    "freezegun>=1.5",
    "responses>=0.25",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "DJ", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py", "*_test.py"]
addopts = "-q --strict-markers --reuse-db"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "config", "config.settings",
    "common", "common.migrations",
    "apps",
    "apps.users", "apps.users.migrations", "apps.users.tests",
    "apps.tables", "apps.tables.migrations", "apps.tables.tests",
    "apps.menu", "apps.menu.migrations", "apps.menu.tests",
    "apps.orders", "apps.orders.migrations", "apps.orders.tests",
    "apps.printing", "apps.printing.migrations", "apps.printing.tests",
    "apps.printing.management", "apps.printing.management.commands",
    "apps.printing.templates",
    "apps.events", "apps.events.tests",
    "apps.shifts", "apps.shifts.migrations", "apps.shifts.tests",
]
