[project]
name = "restos-pos"
version = "0.1.0"
description = "RestOS v3 — Cashier desktop (PySide6)"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7,<6.8",
    "requests>=2.32",
    "sseclient-py>=1.8",
    "keyring>=25.0",
    "segno>=1.6",
    # SA-7+ embedded backend (single-exe режим)
    "pgserver>=0.1.4",
    "waitress>=3.0",
    "django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-filter>=24.0",
    "django-cors-headers>=4.4",
    "django-unfold>=0.91",
    "django-environ>=0.11",
    "psycopg[binary]>=3.2",
    "python-escpos>=3.1",
    "openpyxl>=3.1",
    "bcrypt>=4.2",
    "pillow>=10.4",
]

[project.optional-dependencies]
menu-cache = [
    "apsw>=3.46",
]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "responses>=0.25",
    "pyinstaller>=6.10",
]

[project.scripts]
restos-pos = "pos.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
qt_api = "pyside6"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pos*"]
